client/css/widgets/imagewidget.css
.symbolOuterWrapper, .symbolWrapper {
  display: flex;
  justify-content: center;
  align-items: center;
  align-content: center;
  flex-wrap: wrap;
  width: var(--width);
  height: var(--height);
  position: relative;
  font-size: 0;
}

.symbolOuterWrapper.withText.textRight {
  flex-direction: row;
}

.symbolWrapper > div {
  --targetSize: calc(var(--scale) * min(calc(var(--width) / var(--count)), calc(var(--height) / var(--count))));
  min-width: var(--targetSize);
  max-width: var(--targetSize);
  font-size: var(--targetSize);
  color: var(--color);
  transform: translate(var(--offsetX), var(--offsetY));
  background-image: var(--image);
}
.widget:hover > .symbolOuterWrapper > .symbolWrapper > div {
  background-image: var(--hoverImage);
  color: var(--hoverColor);
}

.symbolOuterWrapper > .symbolText {
  flex-grow: 1;
  font-size: 20px;
  color: var(--color);
}
.widget:hover > .symbolOuterWrapper > .symbolText {
  color: var(--hoverColor);
}

.symbolOuterWrapper.withText.textRight > .symbolText {
  text-align: left;
  padding-left: 10px;
}

.widget:hover > .symbolOuterWrapper > .symbolText {
  color: var(--hoverColor);
}

.autoIconAlignImage {
  background-repeat: no-repeat;
  background-position: center;
  min-height: var(--targetSize);
  max-height: var(--targetSize);
}

.autoIconAlignFont {
  font-family: "Material Icons";
  text-transform: lowercase;
  font-weight: normal;
  line-height: 1;
  min-height: var(--targetSize);
  max-height: var(--targetSize);
}

.autoIconAlignSymbols {
  font-family: "VTT-Symbols";
}

